--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,10 @@ plugins:
   - jekyll-seo-tag
 
 # Theme-specific settings
+remote_theme: pages-themes/hacker@v0.2.0
+
+plugins:
+- jekyll-remote-theme
 
 minima:
   # social_links:
